// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegionSelector component > disables region correctly 1`] = `
<DocumentFragment>
  <div>
    <ods-tabs
      class="mb-4"
    >
      <ods-tab
        is-selected="true"
      >
        region-selector-all-locations
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-eu-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ca-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-us-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ap-filter
      </ods-tab>
    </ods-tabs>
    <div
      class="flex flex-wrap gap-4"
    >
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-par"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-par
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-par
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-gra"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-gra
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-rbx"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-rbx
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-sbg"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-sbg
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lim"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/de.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_DE
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lim
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lim
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-central-waw"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/pl.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_PL
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-central-waw
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-central-waw
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-eri"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/gb.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_GB
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-eri
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-eri
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-vin"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-vin
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-vin
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-hil"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-hil
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-hil
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ca-east-bhs"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_CA
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ca-east-bhs
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-bhs
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ap-southeast-sgp"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/sg.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_SG
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ap-southeast-sgp
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-sgp
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ap-southeast-syd"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/au.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_AU
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ap-southeast-syd
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-syd
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-rbx-snc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-rbx-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-sbg-snc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-sbg-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-popover
          trigger-id="ca-east-tor"
          with-arrow="true"
        >
          test
        </ods-popover>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] opacity-40"
          color="neutral"
          id="ca-east-tor"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_CA
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ca-east-tor
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-tor
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ap-south-mum"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/in.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_IN
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ap-south-mum
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-south-mum
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="labeu-west-1-preprod"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_labeu-west-1-preprod
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-preprod
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="labeu-west-1-dev-2"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_labeu-west-1-dev-2
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-2
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="labeu-west-1-dev-1"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_labeu-west-1-dev-1
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-1
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lz-bru"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/be.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_BE
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lz-bru
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-bru
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lz-mad"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/es.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_ES
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lz-mad
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mad
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-gra-snc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-gra-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-dal"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-dal
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-dal
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-lz-lax"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-lz-lax
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-lax
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-chi"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-chi
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-chi
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-nyc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-nyc
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-nyc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-mia"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-mia
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-mia
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-lz-pao"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-lz-pao
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-pao
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-lz-den"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-lz-den
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-den
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-atl"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-atl
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-atl
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lz-mrs"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lz-mrs
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mrs
            </ods-text>
          </div>
        </ods-card>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RegionSelector component > does not break if there is no region at all 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex flex-wrap gap-4"
    />
  </div>
</DocumentFragment>
`;

exports[`RegionSelector component > renders correctly 1`] = `
<DocumentFragment>
  <div>
    <ods-tabs
      class="mb-4"
    >
      <ods-tab
        is-selected="true"
      >
        region-selector-all-locations
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-eu-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ca-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-us-filter
      </ods-tab>
      <ods-tab
        is-selected="false"
      >
        region-selector-ap-filter
      </ods-tab>
    </ods-tabs>
    <div
      class="flex flex-wrap gap-4"
    >
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-par"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-par
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-par
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer region_selector_selected w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-gra"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-gra
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-rbx"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-rbx
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-sbg"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-sbg
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lim"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/de.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_DE
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lim
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lim
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-central-waw"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/pl.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_PL
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-central-waw
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-central-waw
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-eri"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/gb.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_GB
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-eri
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-eri
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-vin"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-vin
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-vin
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-hil"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-hil
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-hil
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ca-east-bhs"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_CA
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ca-east-bhs
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-bhs
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ap-southeast-sgp"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/sg.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_SG
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ap-southeast-sgp
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-sgp
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ap-southeast-syd"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/au.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_AU
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ap-southeast-syd
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-southeast-syd
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-rbx-snc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-rbx-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-rbx-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-sbg-snc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-sbg-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-sbg-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ca-east-tor"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/ca.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_CA
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ca-east-tor
            </ods-text>
            <ods-text
              preset="span"
            >
              ca-east-tor
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="ap-south-mum"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/in.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_IN
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_ap-south-mum
            </ods-text>
            <ods-text
              preset="span"
            >
              ap-south-mum
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="labeu-west-1-preprod"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_labeu-west-1-preprod
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-preprod
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="labeu-west-1-dev-2"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_labeu-west-1-dev-2
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-2
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="labeu-west-1-dev-1"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_labeu-west-1-dev-1
            </ods-text>
            <ods-text
              preset="span"
            >
              labeu-west-1-dev-1
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lz-bru"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/be.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_BE
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lz-bru
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-bru
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lz-mad"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/es.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_ES
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lz-mad
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mad
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-gra-snc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-gra-snc
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-gra-snc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-dal"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-dal
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-dal
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-lz-lax"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-lz-lax
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-lax
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-chi"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-chi
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-chi
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-nyc"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-nyc
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-nyc
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-mia"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-mia
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-mia
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-lz-pao"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-lz-pao
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-pao
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-west-lz-den"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-west-lz-den
            </ods-text>
            <ods-text
              preset="span"
            >
              us-west-lz-den
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="us-east-lz-atl"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/us.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_US
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_us-east-lz-atl
            </ods-text>
            <ods-text
              preset="span"
            >
              us-east-lz-atl
            </ods-text>
          </div>
        </ods-card>
      </div>
      <div>
        <ods-card
          class="flex items-center p-3 transition-shadow cursor-pointer m-[1px] hover:shadow-md w-full sm:w-[245px] "
          color="neutral"
          id="eu-west-lz-mrs"
        >
          <span
            class="w-[44px] h-[32px] shadow-md shadow-[#000E9C33] mr-3"
            style="background-image: url(flags/fr.svg);"
          />
          <div
            class="flex flex-col"
          >
            <ods-text
              class="block"
              preset="heading-4"
            >
              region-selector-country-name_FR
            </ods-text>
            <ods-text
              preset="span"
            >
              region-selector-city-name_eu-west-lz-mrs
            </ods-text>
            <ods-text
              preset="span"
            >
              eu-west-lz-mrs
            </ods-text>
          </div>
        </ods-card>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
